Complete list view implementation

--- a/CarDemo/Scenes/Base.lproj/Main.storyboard
+++ b/CarDemo/Scenes/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -16,19 +17,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Map" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7b3-TT-mcl">
-                                <rect key="frame" x="190.5" y="437.5" width="33.5" height="21"/>
-                                <color key="backgroundColor" red="0.92941176469999998" green="0.43137254899999999" blue="0.26274509800000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZvZ-YC-n8M">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="7b3-TT-mcl" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Faj-1Y-hZX"/>
-                            <constraint firstItem="7b3-TT-mcl" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="WJ0-o1-eLU"/>
+                            <constraint firstItem="ZvZ-YC-n8M" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="1qb-OB-9wB"/>
+                            <constraint firstItem="ZvZ-YC-n8M" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="RaU-HM-pZM"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ZvZ-YC-n8M" secondAttribute="trailing" id="qzF-aX-isq"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ZvZ-YC-n8M" secondAttribute="bottom" id="yb7-xu-kyo"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -44,21 +44,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="List" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e6K-lO-Uef">
-                                <rect key="frame" x="193.5" y="437.5" width="27.5" height="21"/>
-                                <color key="backgroundColor" red="0.92941176469999998" green="0.43137254899999999" blue="0.26274509800000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CIJ-od-AsM">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="E4w-bB-Dix"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="e6K-lO-Uef" firstAttribute="centerY" secondItem="saq-nX-p56" secondAttribute="centerY" id="55P-Eo-GE9"/>
-                            <constraint firstItem="e6K-lO-Uef" firstAttribute="centerX" secondItem="saq-nX-p56" secondAttribute="centerX" id="Lq6-YH-agh"/>
+                            <constraint firstItem="CIJ-od-AsM" firstAttribute="leading" secondItem="E4w-bB-Dix" secondAttribute="leading" id="NxL-Uq-8TE"/>
+                            <constraint firstItem="E4w-bB-Dix" firstAttribute="trailing" secondItem="CIJ-od-AsM" secondAttribute="trailing" id="Wnn-P4-mU9"/>
+                            <constraint firstItem="E4w-bB-Dix" firstAttribute="bottom" secondItem="CIJ-od-AsM" secondAttribute="bottom" id="gcy-Fp-LBk"/>
+                            <constraint firstItem="CIJ-od-AsM" firstAttribute="top" secondItem="E4w-bB-Dix" secondAttribute="top" id="rHP-VA-bVb"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableViewVehicle" destination="CIJ-od-AsM" id="Q34-5P-BgF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kqh-OF-Ijd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
