--- a/CarDemo/Scenes/Base.lproj/Main.storyboard
+++ b/CarDemo/Scenes/Base.lproj/Main.storyboard
@@ -19,7 +19,18 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZvZ-YC-n8M">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <subviews>
+                                    <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="MGy-Bm-aDY">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
+                                    </mapView>
+                                </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="MGy-Bm-aDY" secondAttribute="bottom" id="Epr-lx-73y"/>
+                                    <constraint firstItem="MGy-Bm-aDY" firstAttribute="top" secondItem="ZvZ-YC-n8M" secondAttribute="top" id="L5h-6h-hxq"/>
+                                    <constraint firstItem="MGy-Bm-aDY" firstAttribute="leading" secondItem="ZvZ-YC-n8M" secondAttribute="leading" id="XME-l3-WgP"/>
+                                    <constraint firstAttribute="trailing" secondItem="MGy-Bm-aDY" secondAttribute="trailing" id="unx-O5-gOz"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -31,6 +42,9 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ZvZ-YC-n8M" secondAttribute="bottom" id="yb7-xu-kyo"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="MGy-Bm-aDY" id="MgG-lv-ILr"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
